tests/fixtures/negative/lossy_topic_without_gap_tolerance.wrela
// expect: SEM0041: gap topic counter requires a gap-tolerant executor policy
module negative.lossy_topic_without_gap_tolerance

module machine.x86_64.cpu_state
data SlotIdentity { label: StringLiteral }
data ExecutorSlot { id: U64 }
class ExecutorRegistry { fn claim(self, identity: SlotIdentity) -> ExecutorSlot { return ExecutorSlot(id = 0) } }

module machine.x86_64.executor_loop
class NoGapRequiredPolicy {}

module machine.x86_64.topic_u64
use { ExecutorSlot } from machine.x86_64.cpu_state
data TopicIdentity { label: StringLiteral }
class U64GapTopic { identity: TopicIdentity; asm fn subscribe(self, subscriber: ExecutorSlot) -> U64GapSubscription { ret } }
data U64GapSubscription { topic: U64GapTopic; subscriber: ExecutorSlot }

module negative.lossy_topic_without_gap_tolerance.app
use { ExecutorRegistry, ExecutorSlot, SlotIdentity } from machine.x86_64.cpu_state
use { NoGapRequiredPolicy } from machine.x86_64.executor_loop
use { TopicIdentity, U64GapSubscription, U64GapTopic } from machine.x86_64.topic_u64

executor Worker {
    slot: ExecutorSlot
    loop: NoGapRequiredPolicy
    input: U64GapSubscription
    start fn run(self) -> never { while true {} }
}

image Bad {
    transitions { delegated_hardware -> owned_hardware }
    phase delegated_hardware(hardware: DelegatedHardware) -> OwnedHardware { return hardware.exit_to_owned_hardware() }
    phase owned_hardware(hardware: OwnedHardware) -> never {
        let slot = ExecutorRegistry().claim(identity = SlotIdentity(label = "worker"))
        let topic = U64GapTopic(identity = TopicIdentity(label = "counter"))
        let sub = topic.subscribe(subscriber = slot)
        let worker = Worker(slot = slot, loop = NoGapRequiredPolicy(), input = sub)
        while true {}
    }
}
